GHSA-p9pc-299p-vxgp - make-dir-cli has outdated yargs with advisory. - might as well replace "replace" with shx while we're at it.

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "test": "jest",
     "test:ci": "cross-env EVENTSTORE_IMAGE=github:ci jest",
     "generate": "run-s generate:*",
-    "generate:replace": "replace \"int64 ([A-z_]*) = ([0-9]*);\" \"int64 \\$1 = \\$2 [jstype = JS_STRING];\" ./protos -r --silent --include=\"*.proto\"",
-    "generate:folder": "make-dir ./generated",
+    "generate:sed": "shx sed -i \"s/int64 ([A-z_]*) = ([0-9]*);/int64 \\$1 = \\$2 [jstype = JS_STRING];/g\" ./protos/*",
+    "generate:folder": "shx mkdir -p ./generated",
     "generate:js": "grpc_tools_node_protoc ./protos/*.proto --proto_path=./protos --grpc_out=grpc_js:./generated --js_out=import_style=commonjs,binary:./generated --ts_out=generate_package_definition:./generated",
-    "clean": "rm -rf ./dist"
+    "clean": "run-s clean:*",
+    "clean:generated": "shx rm -rf ./generated",
+    "clean:dist": "shx rm -rf ./dist"
   },
   "files": [
     "dist/",
@@ -61,10 +63,9 @@
     "grpc-tools": "^1.9.1",
     "grpc_tools_node_protoc_ts": "^4.1.4",
     "jest": "^26.1.0",
-    "make-dir-cli": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
-    "replace": "^1.2.0",
+    "shx": "^0.3.2",
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.2",
     "yaml": "^1.10.0"
