--- a/package.json
+++ b/package.json
@@ -52,37 +52,37 @@
     "globalSetup": "./src/__test__/utils/preflight.ts",
     "globals": {
       "ts-jest": {
-        "tsConfig": "./src/__test__/tsconfig.json"
+        "tsconfig": "./src/__test__/tsconfig.json"
       }
     }
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.1.5",
+    "@grpc/grpc-js": "^1.2.2",
     "@types/debug": "^4.1.5",
     "@types/node": "^12.12.47",
-    "debug": "^4.2.0",
-    "google-protobuf": "^3.13.0",
-    "uuid": "^8.2.0"
+    "debug": "^4.3.1",
+    "google-protobuf": "^3.14.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/google-protobuf": "^3.7.3",
-    "@types/jest": "^26.0.5",
-    "@types/uuid": "^8.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
-    "cross-env": "^7.0.2",
+    "@types/google-protobuf": "^3.7.4",
+    "@types/jest": "^26.0.19",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "cross-env": "^7.0.3",
     "docker-compose": "^0.23.5",
     "dotenv": "^8.2.0",
-    "eslint": "^7.5.0",
+    "eslint": "^7.16.0",
     "get-port": "^5.1.1",
-    "grpc-tools": "^1.9.1",
-    "grpc_tools_node_protoc_ts": "^4.1.4",
-    "jest": "^26.1.0",
+    "grpc-tools": "^1.10.0",
+    "grpc_tools_node_protoc_ts": "^5.0.1",
+    "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.2",
-    "shx": "^0.3.2",
-    "ts-jest": "^26.3.0",
-    "typescript": "^4.0.3",
+    "prettier": "^2.2.1",
+    "shx": "^0.3.3",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.1.3",
     "yaml": "^1.10.0"
   }
 }
