--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node": "^12.18.3 || >=14"
   },
   "jest": {
+    "testTimeout": 60000,
     "preset": "ts-jest",
     "testMatch": [
       "**/samples/**/*.[jt]s?(x)",
@@ -79,7 +80,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.2",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
@@ -91,11 +92,11 @@
     "get-port": "^5.1.1",
     "grpc-tools": "^1.11.1",
     "grpc_tools_node_protoc_ts": "^5.2.2",
-    "jest": "^26.6.3",
+    "jest": "^27.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.0",
     "shx": "^0.3.3",
-    "ts-jest": "^26.5.6",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.2.4",
     "yaml": "^1.10.2"
   }
